# The-Evolutionary-Structure-of-Acoustic-Learnability-A-Deep-Learning-Approach-to-Neotropical-Birdsong

./: .gitignore  .pre-commit-config.yaml  0.0 data_engineering.ipynb  00 Overview.ipynb  01 Extracción.ipynb  02 Baseline sonido.ipynb  03 Extraccion de features.ipynb  04 load_audios.ipynb  Interpretacion PC.md  PRE_COMMIT_SETUP.md  README.md  Species_Passeriformes_total.csv  esquema.md  main.py  pre-commit-config.yaml  pyproject.toml  requirements.txt
bisnu16cse039-Eastern-African-Bird-Species-Classification-80eb525/: LICENSE  README.md  efficientnet-and-gru-b7.ipynb  efficientnet-and-lstmn-b7.ipynb  fine-tune-efficientnet-b7.ipynb  image-creation-128-x-256-from-audio-th.ipynb
data/: features_total.csv
evolution/: 00 Data-preparation.ipynb  00_data-preparation.ipynb  01_data-avonet.ipynb  02_tree.ipynb  utils.py
features/: Alaudidae_Eremophila_Eremophila alpestris.csv  Bombycillidae_Bombycilla_Bombycilla cedrorum.csv  Cinclidae_Cinclus_Cinclus leucocephalus.csv  Conopophagidae_Conopophaga_Conopophaga aurita.csv  Conopophagidae_Conopophaga_Conopophaga castaneiceps.csv  Conopophagidae_Conopophaga_Conopophaga peruviana.csv  Conopophagidae_Pittasoma_Pittasoma michleri.csv  Conopophagidae_Pittasoma_Pittasoma rufopileatum.csv  Corvidae_Cyanocorax_Cyanocorax affinis.csv  Corvidae_Cyanocorax_Cyanocorax heilprini.csv  Corvidae_Cyanocorax_Cyanocorax violaceus.csv  Corvidae_Cyanocorax_Cyanocorax yncas.csv  Corvidae_Cyanolyca_Cyanolyca armillata.csv  Corvidae_Cyanolyca_Cyanolyca pulchra.csv  Corvidae_Cyanolyca_Cyanolyca turcosa.csv  Cotingidae_Ampelioides_Ampelioides tschudii.csv  (+35 more)
notebooks/: 00 Download data.ipynb  (+59 more)
(+25 files in other folders)
