[tool.poetry]
name = "birds-sounds-images"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipykernel = "^6.29.5"
keras-cv = "^0.9.0"
tensorflow = "^2.18.0"
pydantic = "^2.10.5"
pycocotools = "^2.0.8"
tensorflow-io = "^0.37.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
