[project]
name = "birds-sounds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "borutashap>=1.0.17",
    "scipy>=1.11.4",
    "feature-engine>=1.8.3",
    "ipykernel>=6.29.5",
    "keras-cv>=0.9.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-io>=0.37.1",
]
